--- a/package.json
+++ b/package.json
@@ -1,5 +1,8 @@
 {
   "name": "Restapi-Website",
+  "engines": {
+    "node": "22.x"
+  }
   "version": "3.1.0",
   "description": "WhatsApp Using Lib Baileys Multi Device",
   "main": "index.js",
