--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
   "directories": {
     "lib": "lib"
   },
+  "engines": {
+  "node": "20.x"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
