--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "cheerio": "^1.0.0",
     "cors": "^2.8.5",
     "express": "^4.21.2",
+    "base-64" : "^1.0.0",
     "file-type": "^16.5.4",
     "fluent-ffmpeg": "^2.1.3",
     "form-data": "^4.0.1",
